2005-09-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/ServerBrowserWidget.*: show the version of server running

2005-09-26  Erik Hjortsberg  <erik@katastrof.nu>

	* INSTALL, INSTALL.lyx, NEWS, README, README.lyx: updated documentation
	* Makefile.am: install docs etc. in share/doc/ember-$VERSION

2005-09-26  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/programs/Common.program: definition of the most commonly used shader programs
	* media/materials/scripts/environment.material: removed program which wouldn't run on DX9 and caused crashes
	* ember: open up a xterm window for WFUT so the user can see why nothing appears to be happening when running ember for the firs time

2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/environment/FoliageArea.*,: don't return bool on frame update
	* src/components/ogre/EmberOgre.cpp: don't delete ModelDefinitionManager. hopefully this will lead to no segfaults at application exit, but it's a mess

2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.bat: removed citation marks
	* src/components/ogre/widgets/EntityPickerWidget.*: fixed the signature for the event, something which strangely enough compiles and runs without problem (not even a warning) on gcc, but with MSVC compiles without warning but crashes at runtime, with a useless stack trace. Oh well.

2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/envronment/FoliageArea.*, src/components/ogre/envronment/Foliage.cpp: 
		* added the Ogre::Framelistener to the Foliage class, since you basically can't detach a frame listerner while inside a frameStarted event
		* added methods for destroying FoliageAreas to the Foliage class
		* cleaned up the creation and handling of FoliageAreas a bit
	* src/components/ogre/TerrainGenerator.*:  watch for changes to the config file, more specifically graphics:foliage, and create or remove foliage from the TerrainPages accordingly